Small fix stopping trending post overlapping

--- a/Cinehive/Cinehive/Content/CustomCinehive.css
+++ b/Cinehive/Cinehive/Content/CustomCinehive.css
@@ -1215,7 +1215,7 @@ a.remove-friend-link:active {
     background: #fff;
     min-height: 0px;
     border-radius: 8px;
-    margin-bottom: 10px;
+    margin-bottom: 50px;
     margin-top: -38px;
 }
 
